src/objects/Loyalty__c.object
<CustomObject>
    <description>Anagrafiche delle loyalty</description>
    <fields>
        <fullName>Chiave_Carta__c</fullName>
        <externalId>true</externalId>
        <label>Chiave Carta</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cliente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Chiave cliente</description>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Loyalties</relationshipLabel>
        <relationshipName>Loyalties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Inattivita__c</fullName>
        <label>Data Inattivita</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Data_Inizio__c</fullName>
        <label>Data Inizio</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Scadenza__c</fullName>
        <label>Data Scadenza</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Motivo_Inattivita_Carta__c</fullName>
        <label>Motivo Inattivita Carta</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risposta_JSON__c</fullName>
        <description>Response type</description>
        <label>Risposta JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stato_Carta__c</fullName>
        <label>Stato Carta</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Loyalty</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Codice carta</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loyalties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>